--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -1,5 +1,38 @@
-TAMPILAN APLIKASI SAYA DISINI<BR/><BR/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu</title>
+    <style>
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            padding: 10px;
+            margin-bottom: 5px;
+            background-color: #f2f2f2;
+            cursor: pointer;
+        }
+        li:hover {
+            background-color: #ddd;
+        }
+    </style>
+</head>
+<body>
+<h1>TAMPILAN APLIKASI SAYA DISINI</h1>
+<ul id="menuList">
+    <li onclick="redirectToActivity('menu1')">MENU 1 (ini di aplikasi saya tampilan sudah siap)</li>
+    <li onclick="redirectToActivity('menu2')">MENU 2 (ini di aplikasi saya tampilan sudah siap)</li>
+    <li onclick="redirectToActivity('test')">MENU untuk membeli fitur premium</li>
+    <li onclick="redirectToActivity('menu3')">MENU BARU - JADWAL SHOLAT & ARAH QIBLAT (link dibuatkan supaya terkoneksi dengan halaman jadwal sholat dan arah kiblat)</li>
+</ul>
 
-MENU 1 (ini di aplikasi saya tampilan sudah siap)<BR/>
-MENU 2 (ini di aplikasi saya tampilan sudah siap)<BR/>
-MENU BARU - JADWAL SHOLAT & ARAH QIBLAT (link dibuatkan supaya terkoneksi dengan halaman jadwal sholat dan arah kiblat)<BR/>
+<script>
+        function redirectToActivity(itemName) {
+            Android.redirectToActivity(itemName);
+        }
+    </script>
+</body>
+</html>
